--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mobx": "^6.2.0",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
