--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "leaflet": "^1.7.1",
+    "leaflet-css": "^0.1.0",
     "mobx": "^6.2.0",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
-    "react-leaflet": "^3.1.0",
     "react-hook-form": "^7.2.3",
+    "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
